# dotfiles

./: .bash_aliases  .bashrc  .env.genaiscript.config  .env.genaiscript.template  .env.home  .gitconfig  .gitconfig.default  .gitconfig.local.signing-only  .gitignore  .gitmodules  .profile  .tmux.conf  AGENTS.md  LICENSE  README.md  ROADMAP.md  bashrc  cursor-uri-handler.desktop  genaiscript.config.yaml  generate-ssh-keys  gitconfig  install  install.conf.template.yaml  install.conf.yaml  my-bashrc  my-complete-alias  oh-my-bashrc  oh-my-bashrc.original  ssh_sync  ssh_sync_host_to_wsl  ssh_sync_wsl_to_host  win-install  wsl_host_ssh_sync
.cursor/hooks/state/: continual-learning.json
dictionaries/: deposition.txt  jetscale.txt  personal.txt  questionable.txt  ubisoft.txt  universal.txt
projects/cat_project/: cli.py  clipboard.py  config.py  core.py
ssh/: config
ssh/config.d/: christina.science  deposition  hablab  home.cloud  hydra  mighty  miti  ubisoft
tools/catp/: README.md  __main__.py  cli.py  clipboard.py  config.py  core.py  pyproject.toml  test_zoom.py
