[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catp"
version = "0.1.0"
description = "Context-aware snapshot tool for LLM workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Paul Cuciureanu", email = "pcuciureanu@protonmail.com"}
]
maintainers = [
    {name = "Paul Cuciureanu", email = "pcuciureanu@protonmail.com"}
]
keywords = ["llm", "context", "snapshot", "cli", "tooling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pcuci/dotfiles"
Repository = "https://github.com/pcuci/dotfiles"
Issues = "https://github.com/pcuci/dotfiles/issues"
Changelog = "https://github.com/pcuci/dotfiles/blob/main/tools/catp/CHANGELOG.md"

[project.scripts]
catp = "catp.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["catp*"]

[tool.setuptools.package-data]
catp = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

[tool.ruff.lint.isort]
known-first-party = ["catp"]